Finalizo ejercicios y curso de Funciones y excepciones

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -4435,7 +4435,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4467,7 +4467,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4499,7 +4499,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4531,7 +4531,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4569,7 +4569,7 @@
       "metadata": {
         "id": "462UA7plhBB-"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4583,13 +4583,12 @@
         "\n",
         "# No es correcta ya que: La función anterior genera otro tipo de error (TypeError) porque no es posible usar el operador\n",
         "# de menor que (>) para comparar una lista con un entero. Para corregirlo, necesitamos comparar la\n",
-        "# cantidad de notas con la longitud de la lista.\n",
-        ""
+        "# cantidad de notas con la longitud de la lista.\n"
       ],
       "metadata": {
         "id": "xpyYOsNiDr2G"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4617,7 +4616,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4657,7 +4656,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4693,7 +4692,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4728,7 +4727,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4769,7 +4768,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4832,7 +4831,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4862,7 +4861,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4893,7 +4892,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4947,7 +4946,7 @@
       "metadata": {
         "id": "yVGWMw5Tr0vp"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4963,7 +4962,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4988,7 +4987,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5001,12 +5000,181 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 6 - Estás trabajando con procesamiento de lenguaje natural (NLP) y, en esta ocasión, tu líder te pidió que crees\n",
+        "# un fragmento de código que reciba una lista con las palabras separadas de una frase generada por ChatGPT.\n",
+        "# Necesitas crear una función que evalúe cada palabra de este texto y verifique si el tratamiento para quitar\n",
+        "# los símbolos de puntuación (',', '.', '!' y '?') se realizó. De lo contrario, se lanzará una excepción del\n",
+        "# tipo ValueError señalando el primer caso en que se detectó el uso de una puntuación a través de la frase\n",
+        "# \"El texto presenta puntuaciones en la palabra \"[palabra]\"\". Esta solicitud se centra en el análisis del patrón\n",
+        "# de frases generadas por la inteligencia artificial.\n",
+        "# Datos para probar el código:\n",
+        "# Lista tratada:\n",
+        "lista_tratada = ['Python', 'es', 'un', 'lenguaje', 'de', 'programación', 'poderoso', 'versátil',\n",
+        "                  'y', 'fácil', 'de', 'aprender', 'utilizado', 'en', 'diversos', 'campos', 'desde',\n",
+        "                  'análisis', 'de', 'datos', 'hasta', 'inteligencia', 'artificial']\n",
+        "# Lista no tratada:\n",
+        "lista_no_tratada = ['Python', 'es', 'un', 'lenguaje', 'de', 'programación', 'poderoso,', 'versátil',\n",
+        "                  'y', 'fácil,', 'de', 'aprender', 'utilizado', 'en', 'diversos', 'campos,', 'desde',\n",
+        "                  'análisis', 'de', 'datos', 'hasta', 'inteligencia', 'artificial!']\n",
+        "\n",
+        "def evaluar_puntuacion(lista_palabras):\n",
+        "    try:\n",
+        "        for palabra in lista_palabras:\n",
+        "            if any(puntuacion in palabra for puntuacion in [',', '.', '!', '?']):\n",
+        "                raise ValueError(f\"El texto presenta puntuaciones en la palabra '{palabra}'.\")\n",
+        "    except ValueError as e:\n",
+        "        print(f\"Error: {e}\")\n",
+        "\n",
+        "evaluar_puntuacion(lista_tratada)\n",
+        "print(f'6 - Lista tratada: {lista_tratada}')\n",
+        "evaluar_puntuacion(lista_no_tratada)\n",
+        "print(f'6 - Lista NO tratada: {lista_no_tratada}')\n"
+      ],
       "metadata": {
-        "id": "eErKreJ6uM5t"
+        "id": "eErKreJ6uM5t",
+        "outputId": "51451b2a-f11d-484d-ba96-30ba9768ec93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6 - Lista tratada: ['Python', 'es', 'un', 'lenguaje', 'de', 'programación', 'poderoso', 'versátil', 'y', 'fácil', 'de', 'aprender', 'utilizado', 'en', 'diversos', 'campos', 'desde', 'análisis', 'de', 'datos', 'hasta', 'inteligencia', 'artificial']\n",
+            "Error: El texto presenta puntuaciones en la palabra 'poderoso,'.\n",
+            "6 - Lista NO tratada: ['Python', 'es', 'un', 'lenguaje', 'de', 'programación', 'poderoso,', 'versátil', 'y', 'fácil,', 'de', 'aprender', 'utilizado', 'en', 'diversos', 'campos,', 'desde', 'análisis', 'de', 'datos', 'hasta', 'inteligencia', 'artificial!']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Ejercicio adicional\n",
+        "# 7 - Función de división de columnas y manejo de excepciones:\n",
+        "# Creando la función que recibe las dos listas y la operación a realizar\n",
+        "def divide_columnas(lista_1: list, lista_2: list) -> list:\n",
+        "  # try-except que verifica si es posible calcular la división y lanza una excepción si las listas tienen tamaños\n",
+        "  # diferentes o si hay alguna división por cero en uno de los cálculos entre los números de las listas\n",
+        "  try:\n",
+        "    if len(lista_1) != len(lista_2):  # Verificando si las listas tienen el mismo tamaño, si no, lanza una excepción\n",
+        "      raise ValueError(\"Las listas deben tener el mismo tamaño\")\n",
+        "\n",
+        "    # La función zip empareja los elementos de las listas y se genera una lista mediante la división entre las parejas\n",
+        "    resultado = [round(a / b, 2) for a, b in zip(lista_1, lista_2)]\n",
+        "  except ValueError as e:\n",
+        "    print(e)\n",
+        "  except ZeroDivisionError as e:\n",
+        "    print(f\"{e}: La 2ª lista no puede tener un valor igual a 0\")\n",
+        "  else:\n",
+        "    return resultado\n",
+        "print('7 - Funcion creada para pruebas del codigo de excepciones')\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "P2-nHRfntvG1",
+        "outputId": "c5c10f40-09e7-4c97-9876-50edf9b7c4b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7 - Funcion creada para pruebas del codigo de excepciones\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probando en el ejemplo que no lanza excepciones\n",
+        "presiones = [100, 120, 140, 160, 180]\n",
+        "temperaturas = [20, 25, 30, 35, 40]\n",
+        "\n",
+        "print(f' 7. Caso sin excepciones: {divide_columnas(presiones, temperaturas)}')"
+      ],
+      "metadata": {
+        "id": "94I5efsA2nld",
+        "outputId": "bf2da50c-450c-4657-d86d-b48ce2650166",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 7. Caso sin excepciones: [5.0, 4.8, 4.67, 4.57, 4.5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probando en el ejemplo que lanza una excepción (ZeroDivisionError)\n",
+        "presiones = [60, 120, 140, 160, 180]\n",
+        "temperaturas = [0, 25, 30, 35, 40]\n",
+        "\n",
+        "print(f' 7. Caso 1-con excepciones: {divide_columnas(presiones, temperaturas)}')"
+      ],
+      "metadata": {
+        "id": "1p-S8RWX2nZU",
+        "outputId": "504af1e1-5950-4d1d-c83f-ca442dabce89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "division by zero: La 2ª lista no puede tener un valor igual a 0\n",
+            " 7. Caso 1-con excepciones: None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Probando en el ejemplo que lanza una excepción (ValueError)\n",
+        "presiones = [100, 120, 140, 160]\n",
+        "temperaturas = [20, 25, 30, 35, 40]\n",
+        "\n",
+        "print(f' 7. Caso 2 -con excepciones valueError: {divide_columnas(presiones, temperaturas)}')"
+      ],
+      "metadata": {
+        "id": "JmNvnQDE3mdO",
+        "outputId": "b4787dab-84cf-4de8-da16-6961835ea67e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Las listas deben tener el mismo tamaño\n",
+            " 7. Caso 2 -con excepciones valueError: None\n"
+          ]
+        }
+      ]
     }
   ]
 }
