--- a/ejemploDespliegueImagenes.ipynb
+++ b/ejemploDespliegueImagenes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTIYUaqRH0GBry10/HrUsh",
+      "authorship_tag": "ABX9TyNLLLriN/wCrT/vhVv5sNhm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,18 +36,38 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "from IPython.display import Image\n",
-        "\n",
-        "# Mostrar la imagen guardada\n",
-        "Image('imagenes/ejemploGrafico.png')\n"
+        "![Grafico por Genero](https://github.com/Saya-Sayita/Python2-Funciones/blob/main/imagenes/porGenero.png?raw=true)"
       ],
       "metadata": {
-        "id": "2xhPC3YcwKTx"
+        "id": "SetBxO1y0mkd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2xhPC3YcwKTx",
+        "outputId": "a4744dde-71d4-4026-f613-2784ee061111",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/bash: -c: line 1: syntax error near unexpected token `('\n",
+            "/bin/bash: -c: line 1: `[Grafico por Genero](https://github.com/Saya-Sayita/Python2-Funciones/blob/main/imagenes/porGenero.png?raw=true)'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
