Ejemplo de visualizacion de imagenes

--- a/ejemploDespliegueImagenes.ipynb
+++ b/ejemploDespliegueImagenes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLLLriN/wCrT/vhVv5sNhm",
+      "authorship_tag": "ABX9TyNQtATg57HakMnBDRi/a2EG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "lx377xtS1vdv"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "![Grafico por Genero](https://github.com/Saya-Sayita/Python2-Funciones/blob/main/imagenes/porGenero.png?raw=true)"
       ],
@@ -45,33 +52,27 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "\n",
+        "# otro ejemplo\n",
         "\n"
       ],
       "metadata": {
-        "id": "2xhPC3YcwKTx",
-        "outputId": "a4744dde-71d4-4026-f613-2784ee061111",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/bin/bash: -c: line 1: syntax error near unexpected token `('\n",
-            "/bin/bash: -c: line 1: `[Grafico por Genero](https://github.com/Saya-Sayita/Python2-Funciones/blob/main/imagenes/porGenero.png?raw=true)'\n"
-          ]
-        }
-      ]
+        "id": "T2ILxiuP1mIw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![Grafico de Ejemplo](https://github.com/Saya-Sayita/Python2-Funciones/blob/main/imagenes/ejemploGrafico.png?raw=true)"
+      ],
+      "metadata": {
+        "id": "8XS5PpK61y4H"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "hVd9OupBvzqR"
       },
